@@ -1,0 +1,12 @@
+.\"*******************************************************************
+.\"
+.\" This file was generated with po4a. Translate the source file.
+.\"
+.\"*******************************************************************
+.TH test1 1   
+.SH NAME
+test \- just a test
+
+Hallo
+
+World
