@@ -1,0 +1,12 @@
+.\"*******************************************************************
+.\"
+.\" This file was generated with po4a. Translate the source file.
+.\"
+.\"*******************************************************************
+.TH test1 1   
+.SH NOME
+test \- appena una prova
+
+Ciao
+
+Mondo
