@@ -1,0 +1,5 @@
+NOT creating args.pot as requested (--no-update).
+man.de.1 is 20% translated (1 of 5 strings).
+Discard man.es.1 (3 of 5 strings; only 60% translated; need 70%).
+man.fr.1 is 80% translated (4 of 5 strings).
+man.it.1 is 100% translated (5 strings).
