@@ -1,0 +1,11 @@
+# This file redefines aliases to 'man' to enrich its definition.
+# This was initially not thought as possible, but debhelper relies on it, so make it work.
+
+[po4a_langs] fr es it de
+[po4a_paths] args.pot $lang:args.$lang.po
+
+[po4a_alias:man] man opt:"--keep 0"
+[po4a_alias:man] man opt_es:"--keep 70"
+[po4a_alias:man] man opt_ja:"--keep 100"
+
+[type:man] man.1 $lang:man.$lang.1
