@@ -11,6 +11,8 @@ __   __/ _ \|___  / |
 po4a main script:
  * Fix the parsing of nested simple and double quotes mixed with escaped
    spaces (GitHub's #475) [Mt].
+ * Properly parse config files iteratively redefining the same alias to 
+   enrich it (GitHub's #477) [Mt].
  * Don't eat up quotes around parameters containing spaces, as they are needed
    later on when passing parameters to msgmerge and friends (GitHub's #455)
    [gemmaro].
